--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div id="primaryContainer" class="primaryContainer clearfix">
         <p id="text">
-        The Caravan Press&#x3a;<br /><br />Making Visible the Archive of Gwyneth Alban Davies
+        The Caravan Press&#x3a;<br /><br />Making Visible the Archive of Gwyneth Alban Davis
         </p>
     </div>
     </body>
