--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="timeline-content">
           <p class="timeline-content-date">24th June</h2>
           <p>
-            AnneBlume Weekend
+            'AnneBlume' Weekend. Talk delivered introducing project to public. We also hear from Bill Davis.
           </p>
         </div>
       </div>
@@ -82,7 +82,7 @@
         <div class="timeline-content right">
           <p class="timeline-content-date">10th - 13th July</h2>
           <p>
-            Print Production
+            Print Production. 7 edition of 60 prints produced.
           </p>
         </div>
       </div>
@@ -93,7 +93,7 @@
         </div>
         <div class="timeline-content">
           <p class="timeline-content-date">1st September</p>
-          <p>Book Published</p>
+          <p>Book published, a limited run of 25 editions.</p>
         </div>
       </div>
     
@@ -103,7 +103,7 @@
         </div>
         <div class="timeline-content right">
           <p class="timeline-content-date">2nd-3rd September</p>
-          <p> Exhibition</p>
+          <p> Exhibition at Florence Mine, Egremnont as part of thier 'Ground Force Extra' residency. We host a 'meet the artists' session.</p>
         </div>
       </div>
     
