--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="timeline-content">
           <p class="timeline-content-date">24th June</h2>
           <p>
-            'AnneBlume' Weekend. Talk delivered introducing project to public. We also hear from Bill Davis.
+            'AnneBlume' Weekend. Talk delivered introducing project to public. We also hear from Bill Davis, Gwneth's son, on his memories of her as a printer.
           </p>
         </div>
       </div>
@@ -82,7 +82,7 @@
         <div class="timeline-content right">
           <p class="timeline-content-date">10th - 13th July</h2>
           <p>
-            Print Production. 7 edition of 60 prints produced.
+            Print Production - 7 edition of 60 prints produced.
           </p>
         </div>
       </div>
