--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>The Caravan Press</h1>
           <h2>Making Visible the Archive of Gwyneth Alban Davis</h2>
         <a href="https://indd.adobe.com/view/66f990ed-b05b-4279-8009-688ceabac53f" target="_blank"><button class="button large">Read the Book Here</button></a>
-        <a href="https://archive.org/details/Block61" target="_blank"><button class="button large">Photo Gallery</button></a>
+        <a href="https://archive.org/details/@typooo_north" target="_blank"><button class="button large">Photo Gallery</button></a>
       </div>
     
       <div class="bottom-content-section" data-magellan data-threshold="0">
