--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
           <h2>Making Visible the Archive of Gwyneth Alban Davis</h2>
         <a href="https://indd.adobe.com/view/66f990ed-b05b-4279-8009-688ceabac53f" target="_blank"><button class="button large">Read the Book Here</button></a>
         <a href="https://archive.org/details/@typooo_north" target="_blank"><button class="button large">Photo Gallery</button></a>
+        <h5>Gwyneth Alban Davis was a printmaker who lived in the Lake District during the 1940s and early 1950s She ran her own printmaking business: The Caravan Press. We present her archive in Print and Digital form.
+      
       </div>
     
       <div class="bottom-content-section" data-magellan data-threshold="0">
