--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h2>Making Visible the Archive of Gwyneth Alban Davis</h2>
         <a href="https://indd.adobe.com/view/66f990ed-b05b-4279-8009-688ceabac53f" target="_blank"><button class="button large">Read the Book Here</button></a>
         <a href="https://archive.org/details/@typooo_north" target="_blank"><button class="button large">Photo Archive</button></a>
-        <h5>Gwyneth Alban Davis was a printmaker who lived in the Lake District during the 1940s and early 1950s <br />She ran her own printmaking business: The Caravan Press. We present her archive in Print and Digital form.
+        <h5>Gwyneth Alban Davis was a printmaker who lived in the Lake District during the 1940s and early 1950s <br />She ran her own printmaking business: The Caravan Press. We present her archive in Print and Digital form.<br />
       Gwyneth's press and blocks were returned to the Merz Barn after her death in 2006, however, when they were discovered by artists Heather Ross and Lukas Hornby <br /> the archive was in a bad state. <br />Both artists had used Gwyneth's printing press in their own work and we felt it was important to make visible the work she had done throughout the 1940s and 1950s, running her one-woman printmaking business.
         </h5>
       </div>
